<resources>
    <string name="app_name">Veritrans Android</string>
    <string name="btn_get_token">Get Token now</string>
    <string name="btn_checkout">Checkout</string>
    <string name="btn_pay_now_cc">Pay now with CC</string>
    <string name="btn_pay_now_bca_va">Pay now with BCA VA</string>
    <string name="btn_pay_now_mandiri_bill">Pay now with Mandiri Bill</string>
    <string name="btn_pay_now_permata_va">Pay now with Permata VA</string>
    <string name="btn_pay_now_other_va">Pay now with Other VA</string>
    <string name="btn_pay_now_bca_klikpay">Pay now with BCA KlikPay</string>
    <string name="btn_pay_now_klikbca">Pay now with KlikBCA</string>
    <string name="btn_pay_now_epay_bri">Pay now with e-Pay BRI</string>
    <string name="btn_pay_now_cimb_clicks">Pay now with CIMB Clicks</string>
    <string name="btn_pay_now_mandiri_clickpay">Pay now with Mandiri Clickpay</string>
    <string name="btn_pay_now_mandiri_ecash">Pay now with Mandiri E-Cash</string>
    <string name="btn_pay_now_telkomsel_cash">Pay now with Telkomsel Cash</string>
    <string name="btn_pay_now_indosat_dompetku">Pay now with Indosat Dompetku</string>
    <string name="btn_pay_now_xl_tunai">Pay now with XL Tunai</string>
    <string name="btn_pay_now_indomaret">Pay now with Indomaret</string>
    <string name="btn_pay_now_kioson">Pay now with Kioson</string>
    <string name="btn_pay_now_gift_card">Pay now with Gift Card</string>
    <string name="hint_klikbca">KlikBCA User ID</string>
    <string name="hint_card_token">Card Token</string>
    <string name="hint_checkout_token">Checkout Token</string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_card_pin">Pin</string>
    <string name="hint_card_cvv">Card CVV</string>
    <string name="hint_card_expiry_month">Card Expiry Month</string>
    <string name="hint_card_expiry_year">Card Expiry Year</string>
    <string name="hint_mandiri_clickpay_token_response">Token Response</string>
    <string name="hint_telkomsel_cash_token">Telkomsel Cash Token</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="txt_loading">Loading</string>
    <string name="btn_start_uisdk">start ui sdk</string>

        <string name="buy">Buy</string>
        <string name="header_token">Token : </string>
        <string name="btn_refresh_token">Refresh Token</string>
        <string name="title_show_credit_card_example">Credit Card Flow</string>
        <string name="title_show_example">Show Example</string>
        <string name="title_card_widget">Widget Example</string>
        <string name="title_credit_card_options">Credit Card Options</string>
        <string name="btn_start_credit_card">Start Credit Card Payment</string>
        <string name="bca_payment">BCA</string>
        <string name="btn_start_bca_klikpay">BCA KlikPay</string>
        <string name="btn_start_klik_bca">KlikBCA</string>
        <string name="mandiri_payment">Mandiri</string>
        <string name="btn_start_mandiri_clickpay">Mandiri Clickpay</string>
        <string name="btn_start_mandiri_ecash">Mandiri E-Cash</string>
        <string name="other_internet_banking_payment">Other Internet Banking</string>
        <string name="btn_start_cimb_clicks">CIMB Clicks</string>
        <string name="btn_start_bri_epay">BRI Epay</string>
        <string name="btn_start_bank_transfer">Bank Transfer</string>
        <string name="btn_general">General</string>
        <string name="btn_permata">Permata</string>
        <string name="btn_mandiri">Mandiri</string>
        <string name="mobile_credit_payment">Mobile Payment</string>
        <string name="btn_telkomsel_cash">T-Cash</string>
        <string name="btn_indosat_dompetku">Indosat Dompetku</string>
        <string name="btn_xl_tunai">XL Tunai</string>
        <string name="btn_bca">BCA</string>
        <string name="btn_other">Other Bank</string>
        <string name="btn_show_core">Core Flow</string>
        <string name="btn_show_ui_flow">UI Flow</string>
        <string name="register">Register</string>
        <string name="buy_with_core">Core flow</string>
        <string name="buy_with_ui">UI flow</string>
        <string name="show_card_widget">Show Widget</string>
        <string name="show_card_widget_register">Show Register Widget</string>
        <string name="buy_with_credit_card">Buy using credit card</string>
        <string name="buy_with_permata_va">Buy using Permata VA</string>
        <string name="buy_with_mandiri_bill">Buy using Mandiri Bill</string>
        <string name="buy_with_bca_va">Buy using BCA VA</string>
        <string name="buy_with_mandiri_click">Buy using Mandiri Click</string>
        <string name="buy_with_cimbc_click">Buy using CIMB Click</string>
        <string name="buy_with_indomaret">Buy using Indomaret</string>
        <string name="buy_with_mandiri_e_cash">Buy using Mandiri E-Cash</string>
        <string name="buy_with_bca_klik">Buy using BCA KlikPay</string>
        <string name="activity_title_credit_card">Pay with Credit/Debit Card</string>
        <string name="activity_title_permata_va">Pay with Bank Transfer</string>
        <string name="activity_title_mandiri_bill">Pay with Mandiri Bill</string>
        <string name="activity_title_bca">Pay with BCA</string>
        <string name="activity_title_mandiri_click">Pay with Mandiri Click</string>
        <string name="activity_title_cimb_click">Pay with CIMB Click</string>
        <string name="activity_title_indomaret">Pay with Indomaret</string>
        <string name="activity_title_mandiri_cash">Pay with Mandiri E-Cash</string>
        <string name="activity_title_bca_klik">Pay with BCA KlikPay</string>
        <string name="activity_title_card_registration">Register Credit Card</string>
        <string name="activity_title_core_flow">Core Flow Examples</string>
        <string name="bank_options">Bank Options</string>
        <string name="bank_bni">BNI</string>
        <string name="bank_mandiri">Mandiri</string>
        <string name="bank_bca">BCA</string>
        <string name="bank_bri">BRI</string>
        <string name="bank_maybank">Maybank</string>
        <string name="expiry_options">Custom Expiry Options</string>
        <string name="expiry_none">None</string>
        <string name="expiry_one_minute">1 Minute</string>
        <string name="expiry_one_hour">1 Hour</string>
        <string name="card_secure_options">3D Secure Options</string>
        <string name="card_secure">Secure</string>
        <string name="card_not_secure">Not Secure</string>
        <string name="card_click_normal">Normal</string>
        <string name="card_click_two_click">Two Click</string>
        <string name="card_click_one_click">One Click</string>
        <string name="label_credit_card">credit_card</string>
        <string name="label_bank_transfer">bank_transfer</string>
        <string name="label_bca_klik_bca">bca_klikbca</string>
        <string name="label_mandiri_clickpay">mandiri_clickpay</string>
        <string name="label_bca_klikpay">bca_klikpay</string>
        <string name="label_cimbclick">cimb_clicks</string>
        <string name="bca_klikpay">BCA Klik Pay</string>
        <string name="label_bri_epay">bri_epay</string>
        <string name="label_payment_mandiri_ecash">mandiri_ecash</string>
        <string name="label_payment_indomaret">indomaret</string>
        <string name="label_mandiri_bill">echannel</string>
        <string name="label_indosat_dompetku">indosat_dompetku</string>
        <string name="name_credit_card">Credit Card</string>
        <string name="name_klik_bca">Klik BCA</string>
        <string name="name_mandiri_click_pay">Mandiri Click Pay</string>
        <string name="name_bca_klikpay">BCA Klik Pay</string>
        <string name="name_cimb_clicks">CIMB Click</string>
        <string name="name_epay_bri">Epay BRI</string>
        <string name="name_indomaret">Indomaret</string>
        <string name="name_payment_method_mandiri_ecash">Mandiri E Cash</string>
        <string name="name_mandiri_bill_payment">Mandiri Bill Pay</string>
        <string name="name_indosat_dompetku">Indosat Dompetku</string>
        <string name="label_bank_transfer_bca">bca_va</string>
        <string name="name_bank_transfer_bca">Bank Transfer BCA</string>
        <string name="label_bank_transfer_permata">permata_va</string>
        <string name="label_bank_transfer_mandiri">echannel</string>
        <string name="name_bank_transfer_permata">Bank Transfer Permata</string>
        <string name="name_bank_transfer_mandiri">Bank Transfer Mandiri</string>
        <string name="name_bank_transfer_others">Bank Tranfer Lainnya</string>
        <string name="title_activity_klik_bca_payment">Payment With Klik BCA</string>
        <string name="title_activity_epay_bri">Epay BRI Payment</string>
        <string name="title_activity_cimb_payment">CIMB Click Payment</string>
        <string name="label_bank_transfer_other">other_bank</string>
        <string name="title_activity_bank_transfer">Pay with Bank Transfer</string>
        <string name="payment_type_unsupported">Payment type unsupported</string>
        <string name="label_ok">Ok</string>
        <string name="label_telkomsel_ecash">telkomsel_cash</string>
        <string name="name_telkomsel_ecash">Telkomsel Ecash</string>
        <string name="label_xl_tunai">xl_tunai</string>
        <string name="name_xl_tunai">XL Tunai</string>
        <string name="title_activity_xl_tunai">XL- Tunai</string>
        <string name="title_activity_indosat_dompetku">Indosat Dompetku</string>
        <string name="title_activity_tsel_ecash">Telkomsel E-Cash</string>
        <string name="hint_sdkconfig_snapurl">Snap URL</string>
        <string name="hint_sdkconfig_merchant_url">Merchant Base URL</string>
        <string name="hint_sdkconfig_merchant_clientkey">Merchant Client Key</string>
        <string name="btn_sdkconfig_save">Save</string>
        <string name="btn_sdkconfig_cancel">Cancel</string>
        <string name="error_sdkconfig_empty">Field Cannot Empty</string>
        <string name="activity_sdk_config_title">SETTING SDK ENDPOINT</string>
        <string name="hint_sdkconfig_timeout">Request Time Out in Second</string>
        <string name="error_sdkconfig_digitonly">Digit Only</string>
        <string name="activity_save_credit_card_add_new">New Card</string>
        <string name="cardlist_empty"> There are no saved cards</string>
        <string name="convenience_store">Convenience Store</string>
        <string name="indomaret_cs">Indomaret</string>
        <string name="kioson_cs">Kioson</string>
        <string name="other_payment">Other Payment</string>
        <string name="giftcard">Gift Card</string>
        <string name="promo">Promo</string>
        <string name="txt_active">Active</string>
        <string name="txt_inactive">Not Active</string>
        <string name="save_card_options_title">Save Card Default Options</string>
        <string name="save_card_true">Save</string>
        <string name="save_card_false">Not Saved</string>
        <string name="pre_auth">Pre Auth Feature</string>
        <string name="color_theme">Color Theme</string>
        <string name="custom_field">Custom Field</string>
        <string name="hint_custom_field1">Custom Field 1</string>
        <string name="hint_custom_field2">Custom Field 2</string>
        <string name="hint_custom_field3">Custom Field 3</string>
        <string name="brown">Brown</string>
        <string name="blue_grey">Blue Grey</string>
        <string name="orange">Orange</string>
        <string name="not_set">Not Set</string>

</resources>
