<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.midtrans.veritransandroid.SampleCorekitActivity">

        <Button
            android:id="@+id/btn_uisdk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_start_uisdk" />
        <Button
            android:id="@+id/btn_checkout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_checkout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/hint_checkout_token" />

            <TextView
                android:id="@+id/checkout_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="askfnakfjkafa" />
        </LinearLayout>

        <EditText
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/card_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_cvv"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/card_expiry_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_expiry_month"
            android:inputType="number" />

        <EditText
            android:id="@+id/card_expiry_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_expiry_year"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_get_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_token" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_card_token" />

            <TextView
                android:id="@+id/card_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="4111111-askflaks" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_pay_now_cc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_cc" />

        <Button
            android:id="@+id/btn_pay_now_bca_va"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_bca_va" />

        <Button
            android:id="@+id/btn_pay_now_mandiri_bill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_mandiri_bill" />

        <Button
            android:id="@+id/btn_pay_now_permata_va"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_permata_va" />

        <Button
            android:id="@+id/btn_pay_now_other_va"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_other_va" />

        <Button
            android:id="@+id/btn_pay_now_bca_klikpay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_bca_klikpay" />

        <EditText
            android:id="@+id/klikbca_user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_klikbca" />

        <Button
            android:id="@+id/btn_pay_now_klikbca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_klikbca" />

        <Button
            android:id="@+id/btn_pay_now_epay_bri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_epay_bri" />

        <Button
            android:id="@+id/btn_pay_now_cimb_clicks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_cimb_clicks" />

        <Button
            android:id="@+id/btn_pay_now_mandiri_ecash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_mandiri_ecash" />

        <EditText
            android:id="@+id/mandiri_clickpay_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/mandiri_clickpay_token_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mandiri_clickpay_token_response"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_pay_now_mandiri_clickpay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_mandiri_clickpay" />

        <EditText
            android:id="@+id/telkomsel_cash_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_telkomsel_cash_token"
            android:inputType="textShortMessage"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_pay_now_telkomsel_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_telkomsel_cash" />

        <EditText
            android:id="@+id/indosat_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/btn_pay_now_indosat_dompetku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_indosat_dompetku" />

        <Button
            android:id="@+id/btn_pay_now_xl_tunai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_xl_tunai" />

        <Button
            android:id="@+id/btn_pay_now_indomaret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_indomaret" />

        <Button
            android:id="@+id/btn_pay_now_kioson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_kioson" />

        <EditText
            android:id="@+id/gift_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/gift_card_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_pin"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/btn_pay_now_gift_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pay_now_gift_card" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
